--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "mongodb-autoincrement": "^1.0.1",
+    "mongoose": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
