--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongodb": "^4.3.1",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^6.2.1"
